# platform-cmp-trail-write

./: .eslintrc.json  Cargo.toml  Dockerfile  README.md  jest.config.json  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/: dependabot.yml  settings.yml
.github/workflows/: codeql.yml  release.yml  tests.yml
infra/function/: samconfig.toml  template.yml
lib/: base64.d.ts  base64.js  block.d.ts  block.js
src/: api.rs  b64.js  features.rs  handler.rs  index.js  index.ts  l0Index.js  l0Storage.js  main.rs  service.rs  utils.rs  worker-configuration.d.ts  writer.rs
src/__tests__/: b64.test.js  base64.test.js  block.test.ts  l0Index.test.js  l0Storage.test.js  wasabi.test.js
src/__tests__/l0/: bucket-auth.test.ts  l0-index-req-builder.test.ts  l0-index.test.ts  l0-storage.test.ts
src/__tests__/utils/: base64.test.ts  block.test.ts  bucket.test.ts  jwt.test.ts
src/api/: model_initialize.rs  model_msg_group.rs  model_owner.rs  model_transaction.rs  service.rs
src/features/: block.rs  transaction.rs
src/features/block/: block.rs  block_model.rs  block_service.rs
src/features/transaction/: transaction_model.rs
src/handler/: initialize.rs  msg_group.rs  transaction.rs  writer.rs
src/l0/index/: l0-index-block-uses.ts  l0-index-block.ts  l0-index-body.ts  l0-index-config.ts  l0-index-req-builder.ts  l0-index-req-license.ts  (+5 more)
src/service/: block.rs  metadata.rs  owner.rs  signer.rs  transaction.rs
src/utils/: base64.ts  block.ts  byte_helpers.rs  compact_size.rs  http-guard.ts  jwt.ts  key.ts  merkle_tree.rs  rsa_facade.rs  s3_client.rs
(+18 files in other folders)
